--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "devtool": "inline-source-map",
   "dependencies": {
-    "@babel/core": "^7.1.2",
     "d3": "^5.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "redux": "^4.0.0",
-    "semantic-ui-react": "^0.82.5",
-    "webpack-dev-server": "^3.1.9"
+    "semantic-ui-react": "^0.82.5"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.1.2",
     "babel-loader": "^8.0.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "semantic-ui": "^2.4.0",
+    "source-map-loader": "^0.2.4",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   }
 }
