--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "sourceMap": true,
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline"
+    "dev": "webpack && cd src/semantic && gulp build && cd ../.. && webpack-dev-server --hot --inline"
   },
   "devtool": "inline-source-map",
   "dependencies": {
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "next",
     "semantic-ui": "^2.4.0",
     "source-map-loader": "^0.2.4",
