--- a/package.json
+++ b/package.json
@@ -7,28 +7,40 @@
   "license": "MIT",
   "sourceMap": true,
   "scripts": {
-    "dev": "webpack && cd src/semantic && gulp build && cd ../.. && webpack-dev-server --hot --inline --watch"
+    "dev": "webpack-dev-server --hot --inline --watch"
   },
   "devtool": "inline-source-map",
   "dependencies": {
+    "cross-fetch": "^3.0.1",
     "d3": "^5.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.0",
-    "semantic-ui-react": "^0.82.5"
+    "semantic-ui-react": "^0.85.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.3.1",
+    "@webpack-cli/init": "^0.1.3",
+    "faker": "^4.1.0",
+    "file-loader": "^3.0.1",
+    "mocker-api": "^1.6.7",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
+    "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "next",
-    "semantic-ui": "^2.4.0",
     "source-map-loader": "^0.2.4",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14",
+    "style-loader": "^0.23.1"
   }
 }
