--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.0",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
