--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "sourceMap": true,
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --watch"
+    "dev": "webpack-dev-server --hot --inline"
   },
   "devtool": "inline-source-map",
   "dependencies": {
@@ -17,6 +17,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.85.0",
     "uuid": "^3.3.2"
   },
