--- a/package.json
+++ b/package.json
@@ -23,26 +23,26 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
     "@webpack-cli/init": "^0.1.3",
-    "faker": "^4.1.0",
-    "file-loader": "^3.0.1",
-    "mocker-api": "^1.6.7",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "faker": "^4.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "next",
+    "mocker-api": "^1.6.7",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "style-loader": "^0.23.1"
+    "webpack-dev-server": "^3.1.14"
   }
 }
