--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "uuid": "^3.3.2"
   },
