--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cross-fetch": "^3.0.1",
     "d3": "^5.9.1",
+    "d3-zoom": "^1.7.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
