--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Brett Fouss <bmfouss@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline"
+    "dev": "webpack-dev-server --hot --inline --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "cross-fetch": "^3.0.1",
@@ -32,9 +33,10 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "@webpack-cli/init": "^0.1.3",
+    "@webpack-cli/init": "^0.1.5",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^1.0.1",
     "faker": "^4.1.0",
     "file-loader": "^3.0.1",
@@ -44,6 +46,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
