--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
+    "styled-components": "^4.2.0",
+    "styled-system": "^4.2.2",
+    "typeface-alegreya": "0.0.69",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@webpack-cli/init": "^0.1.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.0",
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
