--- a/now.json
+++ b/now.json
@@ -1,4 +1,16 @@
 {
   "name": "flavor-map",
-  "version": 1
+  "version": 1,
+  "builds": [
+      {
+          "src": "index.html",
+          "use": "@now/static"
+      }
+  ],
+  "routes": [
+      {
+          "src": "/flavor-map",
+          "dest": "/index.html"
+      }
+  ]
 }
