--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^4.2.0",
     "styled-system": "^4.2.2",
     "typeface-alegreya": "0.0.69",
+    "typeface-ibm-plex-sans": "0.0.61",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "html-webpack-plugin": "next",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.4.1"
